--- a/Test.ipynb
+++ b/Test.ipynb
@@ -824,6 +824,107 @@
    "metadata": {
     "collapsed": false
    }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING: No libpcap provider available ! pcap won't be used\n",
+      "D:\\Program\\Anaconda\\envs\\dip2022\\lib\\site-packages\\scapy\\layers\\ipsec.py:471: CryptographyDeprecationWarning: Blowfish has been deprecated\n",
+      "  cipher=algorithms.Blowfish,\n",
+      "D:\\Program\\Anaconda\\envs\\dip2022\\lib\\site-packages\\scapy\\layers\\ipsec.py:485: CryptographyDeprecationWarning: CAST5 has been deprecated\n",
+      "  cipher=algorithms.CAST5,\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Processing file: LabelDataSet/A0\\baseline_Jan17_exp_31_merged_label.csv\n",
+      "baseline_Jan17_exp_31\n",
+      "Reading pcap file...\n",
+      "Parsing pcap file...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|█████████████████████████████████████████████████████████████████████████| 84540/84540 [00:02<00:00, 30921.88it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "120\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "import random\n",
+    "import chunkdetection\n",
+    "import csv\n",
+    "import glob\n",
+    "import os\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.preprocessing import scale\n",
+    "\n",
+    "# dataset_list=['A', 'B1', 'B2', 'C', 'D']\n",
+    "\n",
+    "ans = []\n",
+    "# for dataset in dataset_list:\n",
+    "dataset_folder = 'LabelDataSet/A0/'\n",
+    "files = glob.glob(dataset_folder + '*_label.csv')\n",
+    "# cnt=0\n",
+    "for i in range(1):\n",
+    "    file_name = files[i]\n",
+    "    print(\"Processing file: \" + file_name)\n",
+    "    # if (i >= len_list[dataset]):\n",
+    "    # \tbreak\n",
+    "    file = pd.read_csv(file_name)  # wxh's csv name\n",
+    "    print(os.path.split(file_name)[1].split('/')[-1][:-17])\n",
+    "    feature_file = 'RequetDataSetNew/' +'A0'+'/PCAP_FILES/' + os.path.split(file_name)[1].split('/')[-1][:-17] + '.pcap'  # yhy's pcap name\n",
+    "    feature_class = chunkdetection.ChunkDetection(feature_file)\n",
+    "    print(len(feature_class.getFeature(1516209864093)))"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "[2,\n 1279861.0,\n 2.74914288520813,\n 0,\n 0,\n 0,\n 2,\n 1279861.0,\n 2.74914288520813,\n 0,\n 0,\n 0,\n 2,\n 1279861.0,\n 2.74914288520813,\n 0,\n 0,\n 0,\n 3,\n 1492881.6666666667,\n 4.736539840698242,\n 0,\n 0,\n 0,\n 3,\n 1492881.6666666667,\n 4.736539840698242,\n 0,\n 0,\n 0,\n 5,\n 1412717.6,\n 8.965434789657593,\n 0,\n 0,\n 0,\n 5,\n 1412717.6,\n 8.965434789657593,\n 0,\n 0,\n 0,\n 6,\n 1524897.5,\n 10.465993881225586,\n 0,\n 0,\n 0,\n 7,\n 1564473.857142857,\n 12.488471984863281,\n 0,\n 0,\n 0,\n 7,\n 1564473.857142857,\n 12.488471984863281,\n 0,\n 0,\n 0,\n 8,\n 1445585.0,\n 13.299987077713013,\n 0,\n 0,\n 0,\n 9,\n 1495504.4444444445,\n 15.083724021911621,\n 0,\n 0,\n 0,\n 9,\n 1495504.4444444445,\n 15.083724021911621,\n 0,\n 0,\n 0,\n 11,\n 1420095.0,\n 17.112349271774292,\n 0,\n 0,\n 0,\n 11,\n 1420095.0,\n 17.112349271774292,\n 0,\n 0,\n 0,\n 11,\n 1420095.0,\n 17.112349271774292,\n 0,\n 0,\n 0,\n 12,\n 1464953.25,\n 19.117595434188843,\n 0,\n 0,\n 0,\n 13,\n 1400798.6923076923,\n 19.849315404891968,\n 0,\n 0,\n 0,\n 14,\n 1448151.642857143,\n 21.706393480300903,\n 0,\n 0,\n 0,\n 16,\n 1430921.875,\n 24.502686738967896,\n 0,\n 0,\n 0]"
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "feature_class.getFeature(1516209864093)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   }
   }
  ],
  "metadata": {
